@@ -2500,8 +2500,8 @@ enum { f_RAW = 0, f_PRETTYMAT = 1, f_PRETTY = 3, f_TEX = 4 };
 void    print0(GEN g, long flag);
 void    print1(GEN g);
 void    printf0(const char *fmt, GEN args);
-void    printsep(const char *s, GEN g, long flag);
-void    printsep1(const char *s, GEN g, long flag);
+void    printsep(const char *s, GEN g);
+void    printsep1(const char *s, GEN g);
 void    printtex(GEN g);
 char*   stack_sprintf(const char *fmt, ...);
 char*   stack_strcat(const char *s, const char *t);
