@@ -1,4 +1,10 @@
 1:2:3:4
+0
 
-1:2:3:4
+0
+1:2:3:40
+0
+[1, 0; 0, 1]
+0
+[1, 0; 0, 1]0
 Total time spent: 0
