@@ -1,4 +1,6 @@
-printsep(":", 1,2,3,4)
-printsep(":")
-printsep1(":", 1,2,3,4)
-printsep1(":")
+printsep(":", 1,2,3,4);print(0);
+printsep(":");print(0);
+printsep1(":", 1,2,3,4);print(0);
+printsep1(":");print(0);
+printsep(":",matid(2));print(0);
+printsep1(":",matid(2));print(0);
